1998-09-29  John R. Jackson  <jrj@purdue.edu>

	* server-src/taper.c (end_tape): do not rewind the tape when done.

1998-09-29  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in (WANT_CLIENT, WANT_RESTORE, WANT_SERVER, 
	WANT_RECOVER, WANT_TAPE, WANT_AMPLOT, WANT_CHG_SCSI): automake
	conditionals
	* amplot/Makefile.am: use them
	* changer-src/Makefile.am: ditto
	* client-src/Makefile.am: ditto
	* common-src/Makefile.am: ditto
	* man/Makefile.am: ditto
	* recover-src/Makefile.am: ditto
	* restore-src/Makefile.am: ditto
	* server-src/Makefile.am: ditto
	* tape-src/Makefile.am: ditto

	* Makefile.am: don't print commands that work around old aclocal bug

	* docs/DUMPER-API: remove environment variables, and mention a
	program that will help translating disklist entries to device names, 
	mount points and filesystem types

	* recover-src/extract_list.c (extract_files_child): do not crash
	after failing to read the dump file header
	Reported by Jose Cheng <jcheng@math.ist.utl.pt>

1998-09-28  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/taper.c (taperscan_slot): initialize scan_datestamp, to
 	avoid amfree of uninitialized pointer
	Reported by Lance A. Brown <brown9@niehs.nih.gov>

1998-09-27  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/DUMPER-API (USER, GROUP): detailed security mechanisms
	(estimate, estimate-parse): can print `KILL' after the estimate
	
	* docs/DUMPER-API: various suggestions from Eric Siegerman
 	<erics@now.com> and some explanations added
	
1998-09-27  Andy Farkas  <andyf@speednet.com.au>

	* man/amlabel.8.in (labelstr): fix typo

1998-09-26  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* recover-src/extract_list.c (extract_files_child): fix-up
 	no_initial_params if password or domain information is not found
	Reported by Jose Cheng <jcheng@math.ist.utl.pt>

	* docs/DUMPER-API: extended `index' to `index-from-output' or
 	`index-from-image', as suggested by Dale Hagglund <rdh@best.com>.